--- a/JsonParserApp/JsonParserApp.csproj
+++ b/JsonParserApp/JsonParserApp.csproj
@@ -170,6 +170,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BasicModel.cs" />
+    <Compile Include="Models\EducationModel.cs" />
+    <Compile Include="Models\LanguageModel.cs" />
+    <Compile Include="Models\OrganizationalSkillModel.cs" />
+    <Compile Include="Models\ResumeModel.cs" />
+    <Compile Include="Models\SkillModel.cs" />
+    <Compile Include="Models\WorkModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -207,10 +214,10 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
+    <Content Include="Views\Home\JsonParser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
